--- a/QADemo/test-output/emailable-report.html
+++ b/QADemo/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,828</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,652</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.StepDef.ValidFormFill</td><td><a href="#m0">i_am_on_the_Test_QA_Form_Page</a></td><td rowspan="1">1617302708711</td><td rowspan="1">2650</td></tr><tr class="passedeven"><td><a href="#m1">i_start_to_fill_out_the_form</a></td><td rowspan="1">1617302711364</td><td rowspan="1">151</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.StepDef.EmptyForm</td><td><a href="#m0">i_scroll_down_to_submit_button</a></td><td rowspan="1">1617567700573</td><td rowspan="1">3629</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.StepDef.ValidFormFill#i_am_on_the_Test_QA_Form_Page</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.StepDef.ValidFormFill#i_start_to_fill_out_the_form</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.StepDef.EmptyForm#i_scroll_down_to_submit_button</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
