--- a/QADemo/test-output/index.html
+++ b/QADemo/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.StepDef.ValidFormFill" hash-for-method="i_am_on_the_Test_QA_Form_Page">i_am_on_the_Test_QA_Form_Page</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.StepDef.ValidFormFill" hash-for-method="i_start_to_fill_out_the_form">i_start_to_fill_out_the_form</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.StepDef.EmptyForm" hash-for-method="i_scroll_down_to_submit_button">i_scroll_down_to_submit_button</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,21 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.StepDef.ValidFormFill</span>
+              <span class="class-name">com.StepDef.EmptyForm</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="i_am_on_the_Test_QA_Form_Page">
-                  </a> <!-- i_am_on_the_Test_QA_Form_Page -->
-                  <span class="method-name">i_am_on_the_Test_QA_Form_Page</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="i_start_to_fill_out_the_form">
-                  </a> <!-- i_start_to_fill_out_the_form -->
-                  <span class="method-name">i_start_to_fill_out_the_form</span>
+                  <a name="i_scroll_down_to_submit_button">
+                  </a> <!-- i_scroll_down_to_submit_button -->
+                  <span class="method-name">i_scroll_down_to_submit_button</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -147,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/tt/nsvrf5zx0jd9cpc6ljnl5fvw0000gn/T/testng-eclipse-1862930895/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/tt/nsvrf5zx0jd9cpc6ljnl5fvw0000gn/T/testng-eclipse--652010415/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.StepDef.ValidFormFill&quot;/&gt;
+      &lt;class name=&quot;com.StepDef.EmptyForm&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -196,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'i_am_on_the_Test_QA_Form_Page')
-data.setCell(0, 2, 'com.StepDef.ValidFormFill')
-data.setCell(0, 3, 2650);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'i_start_to_fill_out_the_form')
-data.setCell(1, 2, 'com.StepDef.ValidFormFill')
-data.setCell(1, 3, 151);
+data.setCell(0, 1, 'i_scroll_down_to_submit_button')
+data.setCell(0, 2, 'com.StepDef.EmptyForm')
+data.setCell(0, 3, 3629);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -235,14 +219,10 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.StepDef.ValidFormFill</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.StepDef.EmptyForm</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">i_am_on_the_Test_QA_Form_Page</span>
+                <span class="method-name">i_scroll_down_to_submit_button</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">i_start_to_fill_out_the_form</span>
-                <span class="method-start">2653 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
