--- a/QADemo/test-output/old/Default suite/classes.html
+++ b/QADemo/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.StepDef.ValidFormFill</td>
+<td>com.StepDef.EmptyForm</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>i_start_to_fill_out_the_form</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>i_am_on_the_Test_QA_Form_Page</td>
+<td>i_scroll_down_to_submit_button</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
