--- a/QADemo/test-output/old/Default suite/methods.html
+++ b/QADemo/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa799">  <td>21/04/04 16:21:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EmptyForm.i_scroll_down_to_submit_button()[pri:0, instance:com.StepDef.EmptyForm@1b26f7b2]">i_scroll_down_to_submit_button</td> 
-  <td>main@17037394</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>21/04/17 19:07:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:com.TestRunner.TestRunner@69b0fd6f]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2124046270</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>21/04/17 19:07:56</td>   <td>178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:com.TestRunner.TestRunner@69b0fd6f]">feature</td> 
+  <td>main@2124046270</td>   <td></td> </tr>
+<tr bgcolor="6f6598">  <td>21/04/17 19:08:04</td>   <td>8143</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:com.TestRunner.TestRunner@69b0fd6f]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2124046270</td>   <td></td> </tr>
 </table>
